@@ -46,6 +46,7 @@ CHANGELOG Roundcube Webmail
 - Fix fatal error when using DMY- or MDY-based date format in PostgreSQL (#5808)
 - Fix bug where errors were not printed when using bin/update.sh (#5834)
 - Fix PHP 7.2 warnings on count() use (#5845)
+- Fix bug where Chrome could not upload the same file that was selected before (#5854)
 
 RELEASE 1.3.0
 -------------
